--- a/TennisSim/Views/Game/Start.cshtml
+++ b/TennisSim/Views/Game/Start.cshtml
@@ -3,7 +3,8 @@
     ViewData["Title"] = "Tennis Dashboard";
 }
 
-<link rel="stylesheet" type="text/css" href="~/css/start.css" />
+
+<link rel="stylesheet" type="text/css" href="~/css/starts.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 
 <nav class="wta-nav">
